trunk/Archive/a2ba8e478951807ab724e13e21ad175d-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:3:5: error: 'EnableIf' has not been declared
     EnableIf<
     ^
main.cpp:3:13: error: expected '>' before '<' token
     EnableIf<
             ^
main.cpp:10:1: error: expected unqualified-id at end of input
 >
 ^
